--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://saniabansotra.github.io/port",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,7 @@
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "gh-pages": "^6.1.1",
     "mailchimp-subscribe": "^2.4.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
@@ -30,6 +32,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
